<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        style="@style/Titre"
        android:id="@+id/text_regle"
        android:text="@string/regle" />

    <LinearLayout
        android:layout_below="@+id/text_regle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
	    <Button
	        style="@style/BoutonGrand"
	        android:id="@+id/principe"
	        android:layout_gravity="center_horizontal"
	        android:onClick="reglePrincipe"
	        android:text="@string/principe" />
	    <Button
	        style="@style/BoutonGrand"
	        android:id="@+id/le_contrat"
	        android:layout_gravity="center_horizontal"
	        android:onClick="regleContrat"
	        android:text="@string/contrat" />
	    
	    <Button
	        style="@style/BoutonGrand"
	        android:id="@+id/la_coinche"
	        android:layout_gravity="center_horizontal"
	        android:onClick="regleCoinche"
	        android:text="@string/coinche" />
	
	    <Button
	        style="@style/BoutonGrand"
	        android:id="@+id/deroulement_partie"
	        android:layout_gravity="center_horizontal"
	        android:onClick="regleDeroulement"
	        android:text="@string/deroulement" />
	    
	    <Button
	        style="@style/BoutonGrand"
	        android:id="@+id/les_points"
	        android:layout_gravity="center_horizontal"
	        android:onClick="reglePoints"
	        android:text="@string/points" />
	    <Button
	        style="@style/BoutonGrand"
	        android:id="@+id/les_annonces"
	        android:layout_gravity="center_horizontal"
	        android:onClick="regleAnnonces"
	        android:text="@string/annonces" />
	</LinearLayout>
</RelativeLayout>