<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnexionActivity" >

    <TextView
        style="@style/Titre"
        android:id="@+id/text_connexion"
        android:text="@string/connexion" />
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_conn"
        android:layout_below="@+id/text_connexion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <EditText android:id="@+id/identifiant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/identifiant" />
    
    <EditText android:id="@+id/mdp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mdp" />
    
    <Button
        style="@style/BoutonGrand"
        android:id="@+id/button_connecter"
        android:layout_gravity="center_horizontal"
        android:onClick="connecter"
        android:text="@string/connecter" />
	</LinearLayout>
	<LinearLayout
	    android:orientation="vertical"
		android:layout_below="@+id/layout_conn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
	<TextView
	    android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pas_de_compte" />
	<Button
		android:id="@+id/button_credits"
		style="@style/BoutonGrand"
		android:onClick="creerCompte"
		android:text="@string/creer_compte" />
	</LinearLayout>
</RelativeLayout>