<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_joueurs_connecter"
            style="@style/Titre"
            android:text="@string/text_joueur" />

        <ListView
            android:id="@+id/list_connected_players"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.55" >
        </ListView>

        <TextView
            android:id="@+id/text_chat"
            style="@style/Titre"
            android:text="@string/text_chat" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textOutput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/hello_world" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chatViewLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <EditText
            android:id="@+id/textInput"
            android:layout_width="0dip"
            android:layout_height="45dp"
            android:layout_weight="1" >

            <requestFocus>
            </requestFocus>
        </EditText>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:text="@string/envoyer"
            android:onClick="envoyer" >
        </Button>
    </LinearLayout>

</RelativeLayout>